# CCWhat

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF_MULTIAGENT_SESSION_REPORT.md  README.en.md  README.md  README.zh.md  RELEASE.md  RELEASE.zh.md  initial_state.yml  install.sh  package-lock.json  pyproject.toml
.agent-loop/: AGENT_LOOP_TEMPLATE.md  ORCHESTRATOR.md  state.md
.claude/: settings.local.json
.codex/: hooks.json
assets/: index.html
ccwhat/: __init__.py  agent_config.py  analyzer.py  cli.py  config.py  exporter.py
deep_ai_analysis/: __init__.py  analyzer.py  cli.py  config.py  exporter.py
docs/: ADAPTERS.md  AI Coding诊断.md  ARCHITECTURE.md  CONTRIBUTING.md  Claude日志数据清洗.md  Claude日志解析展示规则.txt  TASK_DATASET_CORE.md  TASK_DATASET_DIAGNOSIS_DESIGN.md  TASK_DATASET_EXPORT.md  TASK_SEGMENTATION.md  VERSION_ROADMAP.md  WINDOWS.md  diff-porting-plan-v2.md  mitmproxy-addon-import-issue.md  release-process.md  turn-display-redesign.md  原始请求响应数据解析规则.txt  打包发布.md  数据清洗规则.md
openspec/: config.yaml
sample_data/: one_log_of_agent.json  one_log_of_agent_tail.json  req_resp_log_v1.json  req_resp_log_v1_output.json  req_resp_log_v1_parsed.json  用户消息-底层请求响应样例.json
scripts/: check-release-safety.py
tests/: __init__.py  test_adapters.py  test_agent_config.py  test_ccwhat_index.py  test_current_session_analysis.py  test_discovery.py  test_export_import_packages.py  test_global_session_search_api.py  test_global_session_search_dom.js  test_platform_helpers.py  test_proxy_recorder_isolation.py  test_recording_config.py  test_req_resp_frontend.py  test_run_command.py  (+16 more)
(+550 files in other folders)
