[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccwhat"
version = "0.2.0"
description = "Record and analyze AI coding CLI traffic"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "mitmproxy>=11.0.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build",
    "twine",
]

[project.scripts]
ccwhat = "ccwhat.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccwhat*", "viewer*"]

[tool.setuptools.package-data]
ccwhat = ["assets/*.md"]
viewer = ["*.html"]
